--- a/Index.html
+++ b/Index.html
@@ -11,14 +11,12 @@
         <div class="highway"></div>
         <div class="city"></div>
         <div class="car">
-            <img src="img/car.png">
+            <img src="img/car.png" alt="image">
         </div>
         <div class="wheel">
-            <img src="img/Car-Wheel-PNG-Picture.png" class="back-wheel">
-            <img src="img/Car-Wheel-PNG-Picture.png" class="front-wheel">
+            <img src="img/Car-Wheel-PNG-Picture.png" class="back-wheel" alt="image">
+            <img src="img/Car-Wheel-PNG-Picture.png" class="front-wheel" alt="image">
         </div>
-
-    </div>
-    
+    </div>    
 </body>
 </html>
